<resources>
    <string name="app_name">Gesture Recognition</string>
    <string name="hello">Draw the pattern here.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="put_bubble_on_home">Put Bubble on screen</string>
    <string name="remove_bubble">Remove Bubble</string>
    <string name="action_settings">Settings</string>
    <string name="enter_contact_number_1">Enter Contact Number 1</string>
    <string name="enter_contact_number_2">Enter Contact Number 2</string>
    <string name="enter_contact_number_3">Enter Contact Number 3</string>
    <string name="enter_contact_number_4">Enter Contact Number 4</string>
    <string name="save_all">SAVE ALL</string>
    <string name="save_address">Save Address</string>
    <string name="speed_dial">Speed Dial</string>
    <string name="address">Address</string>
    <string name="bubble_setting">Floating Bubble Accessibility</string>
    <string name="enter_address">Enter Address</string>
    <string name="enable_disable_bubble">Enable/Disable Bubble</string>
</resources>
