<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.csulb.edu.gesturerecognition.SpeedDialActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/headerLayout"
            android:background="@color/primary_light">


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:id="@+id/gestureIcon"
                android:src="@drawable/dialpad"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressType"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/gestureIcon"
                android:textSize="20sp"
                android:textAlignment="center"
                android:text="@string/speed_dial"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/headerLayout"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_contact_number_1"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText1"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_contact_number_2"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:hint="@string/enter_contact_number_3"
                android:inputType="phone" />

            <EditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editText3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:hint="@string/enter_contact_number_4"
                android:inputType="phone" />
            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="36dp"
                android:onClick="saveAll"
                android:textColor="@android:color/white"
                android:textSize="@dimen/font_text_size"
                android:background="@drawable/shape"
                android:text="@string/save_all" />
        </LinearLayout>
        </RelativeLayout>


    </ScrollView>
</RelativeLayout>
