<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.csulb.edu.gesturerecognition.FloatingBubble">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:id="@+id/headerLayout"
        android:background="@color/primary_light">


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:id="@+id/gestureIcon"
            android:src="@drawable/gesture"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressType"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/gestureIcon"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/enable_disable_bubble"
            />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_below="@id/headerLayout"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnPutFloatingBubble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/put_bubble_on_home"
            android:textColor="@android:color/white"
            android:background="@drawable/shape"
            android:textSize="@dimen/font_text_size"/>

        <Button
            android:id="@+id/btnRemoveFloatingBubble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/remove_bubble"
            android:textColor="@android:color/white"
            android:background="@drawable/shape"
            android:textSize="@dimen/font_text_size"/>
    </LinearLayout>
</RelativeLayout>